-----------------------------------------------------------------------------------------

[New]
- Added MobyGames online search

[Updated]
- Changed the online search to allow for additional filters to be set.
- No pop up message anymore when no search results are found for an online search. 
  Shown in message log instead.
- Added wait time between requests for all online services.

[Fixed]
- Fixed a NullPointerException when performing a mass update using previous online search
  history.
- None of the online services were set up to take the maximum number of search results
  into account.
- UTL field launcher did not work for HTTPS hyper links.

-----------------------------------------------------------------------------------------
Data Crow version 4.3                                              Released on 2022-09-29
-----------------------------------------------------------------------------------------

This version is a first after many years. Data Crow is Java based application and 
it has moved on since 2019. With this release I have updated all 3rd party libraries
to their latest available version (where possible). The code itself has been first
tested against Java 18 (latest version at the moment). The release itself however
has been made compatible with Java 11. 

Is there anything new in this release? Not really, it's more of a maintenance release.
The next version will focus on the online services. You really should upgrade though, 
the old version is no longer deemed safe. The 3rd party libraries are potentially 
even a danger to you system; some will have heard about the Log4J problems where systems
were exposed. This has been fixed by now in Log4J2, which is now also used by Data 
Crow. 

I have removed things that were already not working and required a complete rewrite.
These are the things I will focus on in upcoming releases.

Now onto the positive; everything in this release is working. I have improved the ease