@@ -84,7 +84,7 @@
     
     The scrollbar on the right hand side can be used to move up and down through the text.<br><br>
     
-    To view the text even better you can double click anywhere in the field and a separate dialog is opened:
+    To view the text even better you can CTRL+mouse click (hold down the control key + left click with the mouse) anywhere in the field and a separate dialog is opened:
     
     <br><br><img src="./images/itemform_fields_textlong_zoom.png" alt="" border="0"><br><br>
     
