@@ -10,6 +10,8 @@ Data Crow version 4.4                                              Released on 2
 - No pop up message anymore when no search results are found for an online search. 
   Shown in message log instead.
 - Added wait time between requests for all online services.
+- Long text fields (like description) opened a text view on double click. This has been
+  changed to CTRL + mouse click as double click is also used to select a single word.
 
 [Fixed]
 - Fixed a NullPointerException when performing a mass update using previous online search
